2009-01-07  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.7b7
	
	* iTunesFS.xcodeproj: pulled the plug on 10.4.x version, don't have
	  a 10.4.x box around any more and can't guarantee that the 10.4.x
	  builds will work.

	* *.[hm]: updated copyright notice for 2009, explicitly set
	  space vs. tabs and UTF-8 encoding for all code files.

2008-12-31  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.7b6

	* FUSEOFS/NSObject+FUSEOFS.[hm]: new experimental version of FUSEOFS
	  with slightly different object lookup (provides a context),
	  removed -isFile but added -isMutable reflection to allow write
	  methods later on

	* FUSEOFS/FUSEOFSLookupContext.[hm]: new file, represents a context
	  used during -lookupPathComponent:inContext:

	* FUSEOFS/FUSEObjectFileSystem.[hm]: -lookupPath: uses new
	  FUSEOFSLookupContext during lookup now

	* iTunesPlaylist.m: code changed due to FUSEOFS API changes

	* iTunesFileSystem.m: code changed due to FUSEOFS API changes

	* iTunesLibrary.m: code changed due to FUSEOFS API changes

	* FUSEOFS/FUSEOFSFileProxy.h: code cleanup

	* NSString+Extensions.m: major bug fixed, properly apply Unicode string
	  normalization (decomposed form) in -properlyEscapedFSRepresentation.

2008-12-29  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.7b5

	* Added filesystems-objc-support external, need NSImage+IconData for
	  displaying iconData *sigh*

	* iPodLibrary.m: fixed 64bit issues, updated iTunesDB documentation
	  reference, fixed crashbug in -close, implemented -iconData and
	  removed (old) obsolete -icon

	* iTunesLibrary.m: properly create NSData for libraryIconData (this
	  differs from previous MacFUSE versions)

	* JBiPodLibrary.m: fixed comment

	* iTunesFS.xcodeproj: link against Accelerate.framework
	  (NSImage+IconData utilizes this)

2008-12-28  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.7b4

	* iTunesFS.xcodeproj: properly enabled 64bit builds, build debug
	  build with platform arch only
